--- a/charts/genieacs/1.2.9/charts/genieacs/templates/ingress.yaml
+++ b/charts/genieacs/1.2.9/charts/genieacs/templates/ingress.yaml
@@ -6,13 +6,7 @@
   {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
   {{- end }}
 {{- end }}
-{{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
-{{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -37,25 +31,32 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
+    {{- range .Values.ingress-ui.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
-            {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
             pathType: {{ .pathType }}
-            {{- end }}
             backend:
-              {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
                 name: genieacs-http
                 port:
-                  number: {{ $svcPort }}
-              {{- else }}
-              serviceName: genieacs-http
-              servicePort: {{ $svcPort }}
-              {{- end }}
+                  number: {{ .Values.service_http.port_http }}
+          {{- end }}
+    {{- end }}
+    {{- range .Values.ingress-nbi.hosts }}
+    - host: {{ .host | quote }}
+      http:
+        paths:
+          {{- range .paths }}
+          - path: {{ .path }}
+            pathType: {{ .pathType }}
+            backend:
+              service:
+                name: genieacs-nbi
+                port:
+                  number: {{ .Values.service_nbi.port_nbi }}
           {{- end }}
     {{- end }}
 {{- end }}
