--- a/charts/genieacs/1.2.9/charts/genieacs/templates/service.yaml
+++ b/charts/genieacs/1.2.9/charts/genieacs/templates/service.yaml
@@ -12,7 +12,7 @@ spec:
       protocol: TCP
       name: http    
   selector:
-    {{- include "genieacs.selectorLabels" . | nindent 4 }}
+    {{- include "genieacs-ui.selectorLabels" . | nindent 4 }}
 
 ---
 apiVersion: v1
@@ -29,7 +29,7 @@ spec:
       protocol: TCP
       name: cwmp
   selector:
-    {{- include "genieacs.selectorLabels" . | nindent 4 }}
+    {{- include "genieacs-cwmp.selectorLabels" . | nindent 4 }}
 
 ---
 apiVersion: v1
@@ -46,7 +46,7 @@ spec:
       protocol: TCP
       name: nbi
   selector:
-    {{- include "genieacs.selectorLabels" . | nindent 4 }}
+    {{- include "genieacs-nbi.selectorLabels" . | nindent 4 }}
 
 ---
 apiVersion: v1
@@ -63,4 +63,4 @@ spec:
       protocol: TCP
       name: fs
   selector:
-    {{- include "genieacs.selectorLabels" . | nindent 4 }}
+    {{- include "genieacs-fs.selectorLabels" . | nindent 4 }}
