--- a/charts/genieacs/1.2.9/values.yaml
+++ b/charts/genieacs/1.2.9/values.yaml
@@ -7,7 +7,7 @@ genieacs:
     enabled: false
   serviceAccount:
     create: false
-  ingress-ui:
+  ingress_ui:
     enabled: true
     className: "nginx"
     annotations: {}
@@ -21,7 +21,7 @@ genieacs:
     #  - secretName: chart-example-tls
     #    hosts:
     #      - chart-example.local
-  ingress-nbi:
+  ingress_nbi:
     enabled: true
     className: "nginx"
     annotations: {}
