--- a/charts/genieacs/1.2.9/charts/genieacs/templates/cwmp-deployment.yaml
+++ b/charts/genieacs/1.2.9/charts/genieacs/templates/cwmp-deployment.yaml
@@ -29,7 +29,7 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
-          command: /opt/genieacs/dist/bin/genieacs-cwmp
+          command: ["/opt/genieacs/dist/bin/genieacs-cwmp"]
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
