--- a/charts/genieacs/1.2.9/charts/genieacs/templates/nbi-deployment.yaml
+++ b/charts/genieacs/1.2.9/charts/genieacs/templates/nbi-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "genieacs.fullname" . }}
+  name: {{ include "genieacs.fullname" . }}-nbi
   labels:
     {{- include "genieacs.labels" . | nindent 4 }}
 spec:
