--- a/charts/genieacs/1.2.9/charts/genieacs/templates/nbi-deployment.yaml
+++ b/charts/genieacs/1.2.9/charts/genieacs/templates/nbi-deployment.yaml
@@ -10,7 +10,7 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      {{- include "genieacs-fs.selectorLabels" . | nindent 6 }}
+      {{- include "genieacs-nbi.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,7 +18,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "genieacs-fs.selectorLabels" . | nindent 8 }}
+        {{- include "genieacs-nbi.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
