--- a/charts/genieacs/1.2.9/charts/genieacs/values.yaml
+++ b/charts/genieacs/1.2.9/charts/genieacs/values.yaml
@@ -35,3 +35,7 @@ env:
   GENIEACS_DEBUG_FILE: /var/log/genieacs/genieacs-debug.yaml
   GENIEACS_EXT_DIR: /opt/genieacs/ext
   GENIEACS_MONGODB_CONNECTION_URL: mongodb://mongo/genieacs
+  GENIEACS_CWMP_LOG_FILE: /var/log/genieacs/genieacs-cwmp.log
+  GENIEACS_NBI_LOG_FILE: /var/log/genieacs/genieacs-nbi.log
+  GENIEACS_FS_LOG_FILE: /var/log/genieacs/genieacs-fs.log
+  GENIEACS_UI_LOG_FILE: /var/log/genieacs/genieacs-ui.log
