--- a/charts/genieacs/1.2.9/templates/mongo-secret.yaml
+++ b/charts/genieacs/1.2.9/templates/mongo-secret.yaml
@@ -1,12 +1,22 @@
-apiVersion: v1 #Store this file apart from the main deployment in a safe location. Must be deployed before the rest.
-data:
-  mongodb-passwords: Z2VuaWVhY3NwYXNzd29yZDEyMw== #genieacspassword123 , please change and encode base64
-  mongodb-root-password: Z2VuaWVhY3Nyb290cGFzc3dvcmQxMjM= #genieacsrootpassword123 , please change and encode base64
+---
+apiVersion: v1
 kind: Secret
 metadata:
-  name: genieacs-mongo
+  name: genieacs-secret
   annotations:
-    "helm.sh/hook": pre-install
-  namespace: genieacs # Change if you deploy to another namespace
+    "helm.sh/resource-policy": "keep"
+    "helm.sh/hook": pre-install, pre-upgrade
+    "helm.sh/hook-weight": "0"
 type: Opaque
-
+data:
+  # retrieve the secret data using lookup function and when not exists, return an empty dictionary / map as result
+  {{- $secretObj := (lookup "v1" "Secret" .Release.Namespace "genieacs-secret") | default dict }}
+  {{- $secretData := (get $secretObj "data") | default dict }}
+  # set mongodbPassword to existing secret data or generate a random one when not exists
+  {{- mongodbPassword := (get $secretData "mongodb-password") | default (randAlphaNum 32 | b64enc) }}
+  mongodb-password: {{ mongodbPassword | quote }}
+  {{- $secretObj := (lookup "v1" "Secret" .Release.Namespace "genieacs-secret") | default dict }}
+  {{- $secretData := (get $secretObj "data") | default dict }}
+  # set $jwtSecret to existing secret data or generate a random one when not exists
+  {{- $jwtSecret := (get $secretData "jwt-secret") | default (randAlphaNum 32 | b64enc) }}
+  GENIEACS_UI_JWT_SECRET: {{ $jwtSecret | quote }}
