--- a/charts/genieacs/1.2.9/templates/nbi-deployment.yaml
+++ b/charts/genieacs/1.2.9/templates/nbi-deployment.yaml
@@ -53,6 +53,11 @@ spec:
                   name: {{ $secret }}
                   key: {{ $key | quote }}
             {{- end }}
+            - name: GENIEACS_MONGODB_CONNECTION_URL
+              valueFrom:
+                secretKeyRef:
+                  name: genieacs-mongodb-genieacs-genieacs
+                  key: connectionString.standardSrv
           {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
