--- a/charts/genieacs/1.2.9/templates/mongo-secret.yaml
+++ b/charts/genieacs/1.2.9/templates/mongo-secret.yaml
@@ -13,7 +13,7 @@ data:
   {{- $secretObj := (lookup "v1" "Secret" .Release.Namespace "genieacs-secret") | default dict }}
   {{- $secretData := (get $secretObj "data") | default dict }}
   # set mongodbPassword to existing secret data or generate a random one when not exists
-  {{- mongodbPassword := (get $secretData "mongodb-password") | default (randAlphaNum 32 | b64enc) }}
+  {{- $mongodbPassword := (get $secretData "mongodb-password") | default (randAlphaNum 32 | b64enc) }}
   mongodb-password: {{ mongodbPassword | quote }}
   {{- $secretObj := (lookup "v1" "Secret" .Release.Namespace "genieacs-secret") | default dict }}
   {{- $secretData := (get $secretObj "data") | default dict }}
