add readme and questions

--- a/charts/genieacs/1.2.9/values.yaml
+++ b/charts/genieacs/1.2.9/values.yaml
@@ -13,11 +13,11 @@ ingress:
   annotations: {}
 #     kubernetes.io/tls-acme: "true"
   ui:
-    host: genieacs-ui.10.100.41.27.nip.io
+    host: genieacs-ui.example.com
     path: /
     pathType: ImplementationSpecific
   nbi:
-    host: genieacs-nbi.10.100.41.27.nip.io
+    host: genieacs-nbi.example.com
     path: /
     pathType: ImplementationSpecific
   tls: []
